--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-app",
+  "name": "2048",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -10,9 +11,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "styled-components": "^4.4.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
